<resources>
    <string name="app_name">JJinBang</string>

    <string name="price">가격</string>
    <string name="moreFilter">필터 설정</string>
    <string name="sizes">방 크기</string>
    <string name="favorite">즐겨찾기</string>
    <string name="sell">방 등록</string>
    <string name="find">방 찾기</string>
    <string name="menu_home">홈</string>
    <string name="menu_search">찾아보기</string>
    <string name="menu_setting">더보기</string>

    <string name="menu_back">&lt;</string>
    <string name="menu_go">&gt;</string>
    <string name="setting_title">설정</string>
    <string name="setting_login">로그인</string>
    <string name="setting_favorite">즐겨찾기 관리</string>

    <string name="login_title">로그인</string>
    <string name="login_explanation">방 등록, 이벤트 참여를 위해선 로그인이 필요합니다.</string>
    <string name="login_id_hint">아이디</string>
    <string name="login_password_hint">비밀번호</string>
    <string name="login_forgot">비밀번호 찾기</string>
    <string name="login_sign_up">회원가입</string>
    <string name="login_make_account_text">계정이 없으신가요?</string>
    <string name="login_login_text">계정이 있으신가요?</string>
    <string name="login_social">또는 카카오톡을 이용해 계정을 만듭니다.</string>

    <string name="reset_submit">비밀번호 변경</string>
    <string name="reset_text">비밀번호 초기화</string>
    <string name="reset_new_password">새로운 비밀번호</string>
    <string name="reset_confirm_password">비밀번호 확인</string>

    <string name="forgot_title">비밀번호 찾기</string>
    <string name="forgot_string">비밀번호를 찾기 위해서는 아이디를 입력해주시길 바랍니다.</string>
    <string name="forgot_id">아이디</string>
    <string name="forgot_send">전송</string>

    <string name="phone_next">다음으로</string>

    <string name="sign_up_title">회원가입</string>
    <string name="sign_up_text">방 등록, 이벤트 참여를 위해선 로그인이 필요합니다.</string>
    <string name="sign_up_name">이름</string>
    <string name="sign_up_phone_number">핸드폰 번호</string>
    <string name="sign_up_phone_text">회원가입을 위한 본인인증을 1회 수행합니다.</string>
    <string name="sign_up_check">인증하기</string>
    <string name="sign_up_checkNumber">인증번호 입력</string>
    <string name="sign_up_checkBtn">인증하기</string>
    <string name="sign_up_password">비밀번호</string>
    <string name="sign_up_confirm_password">비밀번호 확인</string>
    <string name="sign_up_login">로그인</string>
    <string name="sign_up_id">아이디</string>
    <string name="sign_up_duplication_check">중복 확인</string>

    <string name="error_password">비밀번호는 8~15글자 사이어야 하며, 알파벳, 숫자, 특수문자가 최소 1개씩은 포함되어야 합니다</string>
    <string name="error_id">아이디는 5~15글자 사이의 알파벳과 숫자로 이루어져야 합니다. 아이디의 첫글자는 무조건 알파벳으로 시작해야 합니다</string>
    <string name="usable_password">사용할 수 있는 패스워드입니다</string>
    <string name="usable_id">사용할 수 있는 아이디입니다</string>
    <string name="duplication_check">중복검사가 필요합니다</string>
    <string name="duplicated_id">중복된 아이디가 있습니다. 다른 아이디를 입력해 주시기 바랍니다</string>
    <string name="warning_password_confirm">패스워드가 일치하지 않습니다</string>
    <string name="correct_password_confirm">패스워드가 일치합니다</string>

    <string name="login_wrong_info">존재하지 않는 아이디거나 비밀번호가 틀렸습니다</string>

    <string name="phone_num_warning">정확한 핸드폰 번호를 입력해주세요</string>
</resources>