<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_sub"
    android:id="@+id/fragment_sign_up">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginTop="100dp"

        android:id="@+id/sign_up_scroll"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/sign_up" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical"
            android:id="@+id/login_linear" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_title"
                android:textStyle="bold"
                android:textSize="30sp"
                android:textColor="@color/text"
                android:textAlignment="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="13.3dp"
                android:layout_marginBottom="13.3dp"
                android:text="@string/sign_up_text"
                android:textSize="15sp"
                android:textColor="@color/text"
                android:textAlignment="center"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="13.3dp"
                android:layout_marginBottom="13.3dp"
                android:id="@+id/sign_up_name"
                android:hint="@string/sign_up_name"
                android:background="@drawable/login_edit"
                android:inputType="textEmailAddress"
                android:padding="10dp"/>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="113.3dp"
                android:layout_marginTop="13.3dp"
                android:layout_marginBottom="10dp"
                android:columnCount="1"
                android:rowCount="2">

                <LinearLayout
                    android:layout_column="0"
                    android:layout_row="0"
                    android:layout_width="match_parent"
                    android:layout_height="50dp" >

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:id="@+id/sign_up_phone_number"
                        android:hint="@string/sign_up_phone_number"
                        android:background="@drawable/login_edit"
                        android:inputType="phone"
                        android:padding="10dp"
                        android:layout_weight="1"/>

                    <Button
                        android:background="@drawable/button_main"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:text="@string/sign_up_check"
                        android:textStyle="bold"
                        android:textColor="@color/text"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_column="0"
                    android:layout_row="1"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="13.3dp" >

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:id="@+id/sign_up_check_number"
                        android:hint="@string/sign_up_checkNumber"
                        android:background="@drawable/login_edit"
                        android:inputType="phone"
                        android:padding="10dp"
                        android:layout_gravity="end"/>

                    <Button
                        android:background="@drawable/button_main"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:text="@string/sign_up_checkBtn"
                        android:textStyle="bold"
                        android:textColor="@color/text" />

                </LinearLayout>

            </GridLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="13.3dp"
                android:layout_marginBottom="13.3dp"
                android:id="@+id/sign_up_password"
                android:hint="@string/sign_up_password"
                android:background="@drawable/login_edit"
                android:inputType="textPassword"
                android:padding="10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="13.3dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/sign_up_confirm_password"
                android:hint="@string/sign_up_confirm_password"
                android:background="@drawable/login_edit"
                android:inputType="textPassword"
                android:padding="10dp"/>

        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_login"
        android:text="@string/sign_up_title"
        android:textStyle="bold"
        android:textColor="#FFFFFF"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up_scroll"
        app:layout_constraintBottom_toTopOf="@id/login_make_account_text"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_make_account_text"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textColor="@color/text"
        android:id="@+id/login_make_account_text"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        style="?android:borderlessButtonStyle"
        android:id="@+id/sign_up_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_login"
        android:textColor="#f54e5e"
        android:textStyle="bold"
        android:textSize="13sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up"
        app:layout_constraintStart_toEndOf="@id/login_make_account_text"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>