<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_sub"
    android:id="@+id/fragment_forgot">

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/reset_horizon1"
        android:orientation="horizontal"

        app:layout_constraintGuide_percent="0.3"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/reset_horizon2"
        android:orientation="horizontal"

        app:layout_constraintGuide_percent="0.55"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        android:id="@+id/login_linear"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/reset_horizon1"
        app:layout_constraintBottom_toTopOf="@id/reset_horizon2" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="13dp"
            android:text="@string/forgot_title"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="@color/text"
            android:textAlignment="center" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_string"
            android:textSize="15sp"
            android:textColor="@color/text"
            android:textAlignment="center" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="13.3dp"
            android:layout_marginBottom="13.3dp"
            android:id="@+id/forgot_id"
            android:hint="@string/forgot_id"
            android:background="@drawable/login_edit"
            android:inputType="textEmailAddress"
            android:autofillHints="Id"
            android:padding="10dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:background="@drawable/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/forgot_send"
        android:text="@string/forgot_send"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:textSize="15sp"

        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reset_horizon2"
        app:layout_constraintBottom_toTopOf="@id/reset_make_account_text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_make_account_text"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textColor="@color/text"
        android:id="@+id/reset_make_account_text"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgot_send"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        style="?android:borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_sign_up"
        android:id="@+id/forgot_sign_up"
        android:textColor="#f54e5e"
        android:textStyle="bold"
        android:textSize="13sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgot_send"
        app:layout_constraintStart_toEndOf="@id/reset_make_account_text"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>