<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_sub"
    android:id="@+id/fragment_reset">

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/reset_horizon1"
        android:orientation="horizontal"

        app:layout_constraintGuide_percent="0.3"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/reset_horizon2"
        android:orientation="horizontal"

        app:layout_constraintGuide_percent="0.55"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reset_scroll"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/reset_horizon1"
        app:layout_constraintBottom_toTopOf="@id/reset_horizon2">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical"
            android:id="@+id/login_linear"
             >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reset_text"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/text"
                android:textAlignment="center" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="13.3dp"
                android:layout_marginBottom="13.3dp"
                android:id="@+id/reset_new_password"
                android:hint="@string/reset_new_password"
                android:background="@drawable/login_edit"
                android:inputType="textPassword"
                android:autofillHints="Id"
                android:padding="10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="13.3dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/reset_confirm_password"
                android:hint="@string/reset_confirm_password"
                android:background="@drawable/login_edit"
                android:inputType="textPassword"
                android:autofillHints="password"
                android:padding="10dp"/>


        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

    <Button
        android:background="@drawable/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/reset_submit"
        android:text="@string/reset_submit"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:textSize="15sp"

        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reset_scroll"
        app:layout_constraintBottom_toTopOf="@id/reset_make_account_text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_make_account_text"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textColor="#363636"
        android:id="@+id/reset_make_account_text"
        android:visibility="invisible"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reset_submit"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        style="?android:borderlessButtonStyle"
        android:id="@+id/reset_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_sign_up"
        android:textColor="#f54e5e"
        android:textStyle="bold"
        android:textSize="13sp"
        android:visibility="invisible"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reset_submit"
        app:layout_constraintStart_toEndOf="@id/reset_make_account_text"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>