<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_login"
    android:id="@+id/fragment_login">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="150dp"
        android:id="@+id/login_scroll"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/login_login" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical"
            android:id="@+id/login_linear" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_title"
                android:textStyle="bold"
                android:textSize="30sp"
                android:textColor="@color/text"
                android:textAlignment="center" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="13.3dp"
                android:layout_marginBottom="13.3dp"
                android:text="@string/login_explanation"
                android:textSize="15sp"
                android:textColor="@color/text"
                android:textAlignment="center"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="13.3dp"
                android:layout_marginBottom="13.3dp"
                android:id="@+id/login_id"
                android:hint="@string/login_id_hint"
                android:background="@drawable/login_edit"
                android:inputType="textEmailAddress"
                android:autofillHints="Id"
                android:padding="10dp"/>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="13.3dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/login_password"
                android:hint="@string/login_password_hint"
                android:background="@drawable/login_edit"
                android:inputType="textPassword"
                android:autofillHints="password"
                android:padding="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:textColor="@color/color_warning"
                android:id="@+id/login_error_text"
                android:layout_gravity="end" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <CheckBox
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="자동 로그인"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:textColor="@color/text"
                    android:layout_weight="1"
                    android:id="@+id/login_auto"/>

                <Button
                    style="?android:borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/login_forgot"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:textColor="@color/text"
                    android:id="@+id/login_forgot" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/login_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_login"
        android:text="@string/login_title"
        android:textStyle="bold"
        android:textColor="#FFFFFF"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_scroll"
        app:layout_constraintBottom_toTopOf="@id/login_make_account_text"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_make_account_text"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textColor="@color/text"
        android:id="@+id/login_make_account_text"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_login"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        style="?android:borderlessButtonStyle"
        android:id="@+id/login_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_sign_up"
        android:textColor="#f54e5e"
        android:textStyle="bold"
        android:textSize="13sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_login"
        app:layout_constraintStart_toEndOf="@id/login_make_account_text"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>